checkpoint, fixed the overflow I guess, fixed description on mobile, fixed scroll with lenis in the creations carousel

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,7 +47,7 @@ h3 {
 	@apply bg-torch-red-base;
 	border: none;
 	border-radius: 50px;
-	display: none;
+	/* display: none; */
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -61,7 +61,7 @@ h3 {
 ::-webkit-scrollbar-track {
 	@apply bg-black;
 	border: none;
-	display: none;
+	/* display: none; */
 }
 
 ::-webkit-scrollbar-track:hover {
@@ -70,7 +70,7 @@ h3 {
 
 ::-webkit-scrollbar-corner {
 	background: transparent;
-	display: none;
+	/* display: none; */
 }
 
 @font-face {
